# fastapi_testtask

./: .env.example  Dockerfile  pyproject.toml  requirments.txt
src/: config.py  database.py  main.py
src/api/: __init__.py  service.py  short_url.py
src/migration/: env.py
src/migration/versions/: 4a7deb2e90ab_nitial_revision.py
src/models/: short_url.py
src/schemas/: short_url.py
